Amplify main環境に接続: バックエンド設定とGraphQL型定義を更新

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,6 +10,17 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+  yellbackend:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql/**/*.ts
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: typescript
+        generatedFileName: ''
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
