--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,9 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-aws-exports.js
+# aws-exports.js (コメントアウト: Gitで管理)
 awsconfiguration.json
-amplifyconfiguration.json
+# amplifyconfiguration.json (コメントアウト: Gitで管理)
 amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
