--- a/amplify.yml
+++ b/amplify.yml
@@ -1,11 +1,10 @@
 version: 1
-# Backend build temporarily disabled - main environment stack does not exist
-# backend:
-#   phases:
-#     build:
-#       commands:
-#         - '# Execute Amplify CLI with the helper script'
-#         - amplifyPush --simple
+backend:
+  phases:
+    build:
+      commands:
+        - echo "Backend build skipped - main environment stack does not exist"
+        - exit 0
 frontend:
   phases:
     preBuild:
