--- a/amplify.yml
+++ b/amplify.yml
@@ -14,9 +14,13 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: .
     files:
-      - '**/*'
+      - '.next/**/*'
+      - 'public/**/*'
+      - 'node_modules/**/*'
+      - 'package.json'
+      - 'next.config.mjs'
   cache:
     paths:
       - node_modules/**/*
