--- a/amplify.yml
+++ b/amplify.yml
@@ -18,6 +18,7 @@ frontend:
     baseDirectory: .
     files:
       - '.next/**/*'
+      - 'required-server-files.json'
       - 'public/**/*'
       - 'package.json'
       - 'package-lock.json'
