--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,27 @@
     "amplify/#current-cloud-backend": true,
     "amplify/backend/amplify-meta.json": true,
     "amplify/backend/awscloudformation": true
-  }
+  },
+  "chat.mcp.discovery.enabled": {
+    "claude-desktop": true,
+    "windsurf": true,
+    "cursor-global": true,
+    "cursor-workspace": true
+  },
+  "mcp": {
+    "servers": {
+      "figma": {
+        "type": "stdio",
+        "command": "npx",
+        "args": [
+          "-y",
+          "@modelcontextprotocol/server-figma"
+        ],
+        "env": {
+          "FIGMA_PERSONAL_ACCESS_TOKEN": "figd_Rytq3LgoUai07O06ikP0qtFFXMeA6szsgeqthfkd"
+        }
+      }
+    }
+  },
+  "chat.agent.enabled": true
 }
