Remove amplify-backup-temp from git

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ next-env.d.ts
 # Amplify backup directories
 amplify-backup/
 amplify_backup_old/
+amplify-backup-temp/
 
 # Claude settings
 .claude/
