--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ amplify-backup/
 amplify_backup_old/
 amplify-backup-temp/
 
+# Amplify directory (to prevent auto-detection of backend)
+amplify/
+
 # Claude settings
 .claude/
 
