--- a/amplify-backup-original/.config/project-config.json
+++ b/amplify-backup-original/.config/project-config.json
@@ -7,7 +7,7 @@
     "framework": "react",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": ".next",
+      "DistributionDir": "build",
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run-script start"
     }
